Revert "Fix image and button alignment in CSS"
This reverts commit 177f3ee5a2090d8c1cba711e9511e30dc57c7a5c.

--- a/Codice/css/style.css
+++ b/Codice/css/style.css
@@ -526,7 +526,7 @@ border:  .7em solid transparent;
 }
 .containerOpere img{
 
-width: 12.5em;
+width: 12.5;
 height: 12.5em;
 object-fit: cover;
 
@@ -1049,7 +1049,7 @@ input[type=submit] {
   display: flex; /*flex to grid */
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-evenly; 
+  justify-items: space-evenly; 
   margin-left:  1em;
   width: 10em;
   text-align: center;
@@ -1286,7 +1286,7 @@ footer a {
   vertical-align: bottom;
 }
 
-  #selected footer a {
+footer a:selected {
   color: #DDE5FE; 
 }
 
